[gd_scene load_steps=23 format=2]

[ext_resource path="res://AllertaStencil-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PausePopUp.gd" type="Script" id=2]
[ext_resource path="res://Scenes/VolumeSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/DeathOverlay.gd" type="Script" id=4]
[ext_resource path="res://Scenes/SFX_Slider.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 299
corner_radius_bottom_right = 299

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.945098, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.411765, 0.458824, 0, 1 )
corner_radius_top_right = 299
corner_radius_bottom_right = 299

[sub_resource type="Theme" id=3]
ProgressBar/styles/bg = SubResource( 1 )
ProgressBar/styles/fg = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.945098, 1, 0, 0.670588 )

[sub_resource type="Theme" id=7]
ProgressBar/styles/bg = SubResource( 5 )
ProgressBar/styles/fg = SubResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.521569 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 1, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.521569 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.862745 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.945098, 1, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=9]
Button/styles/hover = SubResource( 12 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 13 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBarSpin" type="ProgressBar" parent="."]
light_mask = 0
margin_left = 29.0
margin_top = 19.0
margin_right = 241.0
margin_bottom = 45.0
theme = SubResource( 3 )
max_value = 2.0
value = 2.0
percent_visible = false

[node name="ProgressBarFinisher" type="ProgressBar" parent="."]
light_mask = 0
margin_left = 29.0
margin_top = 51.0
margin_right = 241.0
margin_bottom = 77.0
theme = SubResource( 3 )
max_value = 10.0
value = 5.0
percent_visible = false

[node name="ProgressBarCharging" type="ProgressBar" parent="."]
modulate = Color( 1, 0, 0, 1 )
light_mask = 0
margin_left = 6.0
margin_top = 77.0
margin_right = 80.0
margin_bottom = 93.0
rect_rotation = 270.0
theme = SubResource( 3 )
max_value = 10.0
value = 5.0
percent_visible = false

[node name="ProgressBarStreak" type="ProgressBar" parent="."]
visible = false
margin_left = 683.0
margin_top = 154.0
margin_right = 932.0
margin_bottom = 169.0
rect_rotation = 13.2
theme = SubResource( 7 )
max_value = 2.0
value = 2.0
percent_visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 0.5
margin_top = 522.0
margin_right = 512.0
margin_bottom = 678.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
scroll_active = false

[node name="KillStreakLabel" type="RichTextLabel" parent="."]
visible = false
anchor_right = 0.5
margin_left = 459.0
margin_top = 31.0
margin_right = 503.0
margin_bottom = 109.0
rect_rotation = 13.2
custom_colors/default_color = Color( 0.945098, 1, 0, 0.670588 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
scroll_active = false

[node name="StreakPointsLabel" type="RichTextLabel" parent="."]
visible = false
anchor_right = 0.5
margin_left = 531.0
margin_top = 122.0
margin_right = 575.0
margin_bottom = 203.0
rect_rotation = 13.2
custom_colors/default_color = Color( 0.945098, 1, 0, 0.670588 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]SCORE: 0[/center]"
text = "SCORE: 0"
fit_content_height = true
scroll_active = false

[node name="PausePopUp" type="ColorRect" parent="."]
pause_mode = 2
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 300.0
color = Color( 0, 0, 0, 0.505882 )
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="PausePopUp"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 130.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[center]PAUSED[center]"
text = "PAUSED"

[node name="Button" type="Button" parent="PausePopUp"]
margin_left = 452.0
margin_top = 100.0
margin_right = 572.0
margin_bottom = 125.0
theme = SubResource( 9 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.945098, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 1, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "QUIT TO MENU"

[node name="VolumeSlider" parent="PausePopUp" instance=ExtResource( 3 )]
margin_left = 630.0
margin_top = 50.0
margin_right = 646.0
margin_bottom = 150.0

[node name="SFX_Slider" parent="PausePopUp" instance=ExtResource( 5 )]
margin_left = 590.0
margin_top = 50.0
margin_right = 606.0
margin_bottom = 150.0

[node name="DeathOverlay" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_right = 1024.0
color = Color( 0.576471, 0, 0, 0.486275 )
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="DeathOverlay"]
margin_top = 280.0
margin_right = 1024.0
margin_bottom = 360.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[center]You died.[center]"
text = "You died."

[node name="RichTextLabel2" type="RichTextLabel" parent="DeathOverlay"]
margin_top = 330.0
margin_right = 1024.0
margin_bottom = 410.0
custom_colors/default_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "[center]Score: 0[center]"
text = "Score: 0"

[node name="RetryButton" type="Button" parent="DeathOverlay"]
margin_left = 488.0
margin_top = 380.0
margin_right = 537.0
margin_bottom = 405.0
theme = SubResource( 9 )
custom_fonts/font = SubResource( 18 )
text = "Retry"

[node name="MainMenuButton" type="Button" parent="DeathOverlay"]
margin_left = 448.0
margin_top = 420.0
margin_right = 584.0
margin_bottom = 445.0
theme = SubResource( 9 )
custom_fonts/font = SubResource( 19 )
text = "Go to main menu"

[connection signal="pressed" from="PausePopUp/Button" to="PausePopUp" method="_on_Button_pressed"]
[connection signal="pressed" from="DeathOverlay/RetryButton" to="DeathOverlay" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="DeathOverlay/MainMenuButton" to="DeathOverlay" method="_on_MainMenuButton_pressed"]
